--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,5 +40,31 @@ body {
 }
 
 .underline-smooth {
- @apply relative inline cursor-pointer text-xl font-medium before:bg-violet-600  before:absolute before:-bottom-1 before:block before:h-[2px] before:w-full before:origin-bottom-right before:scale-x-0 before:transition before:duration-300 before:ease-in-out hover:before:origin-bottom-left hover:before:scale-x-100;
+ @apply relative inline cursor-pointer text-xl font-medium before:bg-violet-600  before:absolute before:-bottom-0.5 before:block before:h-[2px] before:w-full before:origin-bottom-right before:scale-x-0 before:transition before:duration-300 before:ease-in-out hover:before:origin-bottom-left hover:before:scale-x-100;
+}
+
+/* Gradient Styles test
+======================= */
+.resume-button {
+  position: relative;
+}
+
+.resume-button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: all 1000ms;
+  opacity: 0.7;
+  border-radius: 0.2rem;
+  background-image: linear-gradient(to right, #44BCFF, #FF44EC, #FF675E);
+  filter: blur(12px);
+}
+
+.resume-button:hover::before {
+  opacity: 1;
+  inset: -1px;
+  transition-duration: 200ms;
 }
